Crop, Reject and some bugs

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-redux": "^7.0.1",
     "react": "^16.7.0",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
