Crop, Reject and some bugs II
Some modification for integration test

--- a/src/config/configFile.json
+++ b/src/config/configFile.json
@@ -17,5 +17,10 @@
       "PANORAMDENTAL",
       "CTBODY",
       "PANONORM"
-  ]
+  ],
+  "NetConfig": {
+    "ip": "localhost",
+    "port": "22223"
+  }
+
 }
